Phase 1 Update 5 (phase complete fix 2)